[refactor] 참조 메소드, toList() 사용