@@ -1,13 +1,9 @@
 package com.miniproject.domain.orders.dto.response;
 
-import com.miniproject.domain.basket.entity.Basket;
 import com.miniproject.domain.orders.entity.Orders;
-import com.miniproject.domain.room.dto.response.RoomInBasketGetResponseDto;
 import com.miniproject.domain.room.dto.response.RoomInOrdersGetResponseDto;
-import com.miniproject.domain.room.entity.RoomInOrders;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -15,6 +11,7 @@ import lombok.NoArgsConstructor;
 @Getter
 @NoArgsConstructor
 public class OrdersResponseDto {
+
     private Long id;
     private int totalPrice;
     private int totalCount;
@@ -22,7 +19,7 @@ public class OrdersResponseDto {
     private List<RoomInOrdersGetResponseDto> rooms;
 
     @Builder
-    public OrdersResponseDto(Long id,int totalPrice, int totalCount
+    public OrdersResponseDto(Long id, int totalPrice, int totalCount
         , List<RoomInOrdersGetResponseDto> rooms) {
         this.id = id;
         this.totalPrice = totalPrice;
@@ -30,15 +27,15 @@ public class OrdersResponseDto {
         this.rooms = rooms;
     }
 
-    public OrdersResponseDto (Orders orders) {
+    public OrdersResponseDto(Orders orders) {
         this.id = orders.getId();
         this.totalPrice = orders.getTotalPrice();
         this.totalCount = orders.getTotalCount();
         this.orderAt = orders.getOrderAt();
         this.rooms = orders.getRoomInOrders().stream().map(
-                roomInOrders -> new RoomInOrdersGetResponseDto(roomInOrders))
-            .collect(Collectors.toList());
-        }
+                RoomInOrdersGetResponseDto::new)
+            .toList();
+    }
 
 
 }
